test/conformance/chainsaw/namespaced-image-validating-policies/context/image-data/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-nivpol
