test/conformance/chainsaw/namespaced-image-validating-policies/context/image-data/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: image-data
spec:
  steps:
  - name: create namespace
    try:
    - create:
        file: namespace.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-namespaced-image-validating-policy-ready
    use:
      template: ../../_step-templates/namespaced-image-validating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: nivpol-image-data
        - name: namespace
          value: test-nivpol
  - name: create deployment
    try:
    - create:
        file: deployment.yaml
